# gnome-mplayer

./: .anjuta_sym_db.db  .gitignore  Makefile.in  README  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
src/: Makefile.am  Makefile.in  about.ui  gnome-mplayer.c  gnome-mplayer.h  gnome_mplayer.ui  main.c
